--- a/index1.html
+++ b/index1.html
@@ -10,11 +10,13 @@
   </head>
   <body>
 <div class="container">
+	<!--game_title-->
 <div class="jumbotron">
 <center> <h1>  P!ng P0ng </h2> </center>
 </div>
 <div class="container" id="gg">
 <div class="row">
+	<!--about_ping_p0ng-->
 <div class="col-md-4" id="ff">
 <h3> About P!ng P0ng    </h3>
 
@@ -26,6 +28,7 @@
 </div>
 <div class="col-md-8" id="hh">
 <h3>Let's play!</h3>
+	<!--rules that how ping_pong--> 
   <h4>Rules:</h4>
   <p>
     Ping Pong will count up to the given number from 1 with the following exceptions:</p>
@@ -35,14 +38,16 @@
       <li>Numbers divisible by 15 become "pingpong"</li>
     </ol>
 
-
+<!--form-->
   <div class="form">
   <form id="cd" >
+	  <!--userInputField-->
     <label for="userNumber"><strong><em>Please Enter Your Number Here:</em></strong></label>
     <input id="ab" type="number" name="number" value="">
     <button  type="submit" name="button"><b>P!ng Pong !!!</b></button>
   </form>
 </div>
+	<!--ping_pong result-->
 <div class="output">
   <ul id="output">
 </ul>
